更新 JVM 调优指南：增强内存泄漏和 CPU 故障的诊断说明